examples/good/13-nested.tx
fun test(): Int {
  fun test1(): Int {
    return 42;
  }

  return test1();
}

fun main(): Void {
  printInt(test());

  return;
}