examples/bad/06-invalid-return.tx
fun illegalFun(x: Int): Int {
    return;
}

fun main(): Void {
    illegalFun(2);
    return;
}